k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arq
  labels:
    name: arq
    environment: production
